# torrus

./: .gitignore  Makefile  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: AppLayout.tsx  BroadcastPickerModal.tsx  LayoutPickerModal.tsx  SessionSidebar.tsx  SplitPane.tsx  TabBar.tsx
frontend/src/components/settings/: SettingsDialog.tsx
frontend/src/components/terminal/: ConnectForm.tsx  TerminalPane.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx  Logo.tsx
frontend/src/hooks/: useSocket.ts
frontend/src/store/: broadcastStore.ts  layoutStore.ts  savedServerStore.ts  serverConfigStore.ts  settingsStore.ts  terminalStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: platform.ts
src/torrus/: __init__.py  cli.py  server.py  ssh_manager.py
src/torrus/static/: index.html
src/torrus/static/assets/: index-4B70TFRH.js  index-BFEI2u2H.js  index-BQILxh3d.css  index-Birv05oA.js  index-C6qV1I8z.css  index-CUEL6kwK.js  index-CX71DHTw.js  index-Cqx9HX2H.css  index-D1vQlG7j.css  index-DbLZQooE.js  index-DcwOEA_p.css  index-Dshtbjcr.css  index-MLgoXUnm.css  index-frz8ykZJ.js  index-s5G1R62-.js  vendor-react-59tfzSPj.js  vendor-react-DH2jDafD.js  vendor-react-d6E-qs4d.js  vendor-ui-413r9PKx.js  vendor-ui-BmdvcSRj.js  vendor-ui-BpIMGEPp.js  vendor-xterm-B5rsJnKL.js
src/torrus/templates/: login.html
